# routers/commentsRouter_controllers.go
@@ -7,112 +7,76 @@ import (
 
 func init() {
 
-	beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "Post",
-			Router:           "/",
-			AllowHTTPMethods: []string{"post"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
+    beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"],
+        beego.ControllerComments{
+            Method: "Post",
+            Router: "/",
+            AllowHTTPMethods: []string{"post"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
 
-	beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "GetAll",
-			Router:           "/",
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
+    beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"],
+        beego.ControllerComments{
+            Method: "GetAll",
+            Router: "/",
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
 
-	beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "Get",
-			Router:           "/:objectId",
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
+    beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"],
+        beego.ControllerComments{
+            Method: "Get",
+            Router: "/:objectId",
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
 
-	beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "Put",
-			Router:           "/:objectId",
-			AllowHTTPMethods: []string{"put"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
+    beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"],
+        beego.ControllerComments{
+            Method: "Delete",
+            Router: "/:objectId",
+            AllowHTTPMethods: []string{"delete"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
 
-	beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:ObjectController"],
-		beego.ControllerComments{
-			Method:           "Delete",
-			Router:           "/:objectId",
-			AllowHTTPMethods: []string{"delete"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
+    beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"],
+        beego.ControllerComments{
+            Method: "Post",
+            Router: "/",
+            AllowHTTPMethods: []string{"post"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
 
-	beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Post",
-			Router:           "/",
-			AllowHTTPMethods: []string{"post"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
+    beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"],
+        beego.ControllerComments{
+            Method: "GetAll",
+            Router: "/",
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
 
-	beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "GetAll",
-			Router:           "/",
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
+    beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"],
+        beego.ControllerComments{
+            Method: "Login",
+            Router: "/login",
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
 
-	beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Get",
-			Router:           "/:uid",
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Put",
-			Router:           "/:uid",
-			AllowHTTPMethods: []string{"put"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Delete",
-			Router:           "/:uid",
-			AllowHTTPMethods: []string{"delete"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Login",
-			Router:           "/login",
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
-
-	beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"],
-		beego.ControllerComments{
-			Method:           "Logout",
-			Router:           "/logout",
-			AllowHTTPMethods: []string{"get"},
-			MethodParams:     param.Make(),
-			Filters:          nil,
-			Params:           nil})
+    beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"] = append(beego.GlobalControllerRouter["beego-rest-api/controllers:UserController"],
+        beego.ControllerComments{
+            Method: "Logout",
+            Router: "/logout",
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
 
 }
